--- a/src/Component/MainComponent/Header/Header.css
+++ b/src/Component/MainComponent/Header/Header.css
@@ -15,3 +15,39 @@
 /* .dropdown-toggle::after {
   content: none !important;
 } */
+.circle-box {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.md-box {
+  font-size: 1.25rem;
+}
+
+.bg-light-primary {
+  background-color: #e2e8f0;
+}
+
+.bg-light-danger {
+  background-color: #f8d7da;
+}
+
+.bg-light-success {
+  background-color: #d1e7dd;
+}
+
+.bg-light-info {
+  background-color: #cff4fc;
+}
+
+.bg-light-warning {
+  background-color: #fff3cd;
+}
+
+.bg-hover-primary:hover {
+  background-color: #e2e8f0;
+}
