--- a/src/Component/MainComponent/Loginn/Login.css
+++ b/src/Component/MainComponent/Loginn/Login.css
@@ -1,4 +1,4 @@
-.label-login {
+/* .label-login {
   font-size: 11px;
   text-align: right;
   font-weight: bold;
@@ -13,7 +13,7 @@
   height: 24px;
   font-size: 11px;
   border-radius: 5px;
-  /* border-radius: 50px; */
+
 
   box-shadow: inset 4px 4px 4px #dde2e7, inset -4px -4px 4px white;
 }
@@ -36,7 +36,7 @@
   height: 30px;
   font-weight: bold;
   background-color: rgb(204, 204, 204);
-  /* color: #31335a; */
+
   color: rgb(255, 255, 255);
   border: "none";
   padding: 10px 20px;
@@ -91,16 +91,14 @@
   color: rgb(70, 68, 68);
 }
 
-/*  is ka matlab ya hai ka 500 ki screen sa nicha jitna bi hai os ko apna hisab sa ker lo set */
+
 @media only screen and (max-width: 500px) {
-  /* .first-row {
-    height: 30vh;
-  } */
+  
   .company-dataa {
     display: none;
   }
   .login-form {
-    /* background-color: white; */
+
     margin-left: 10%;
     margin-top: -70%;
     border: 1px solid #1f2670;
@@ -150,7 +148,7 @@
 
   .second-row {
     height: 36vh;
-    /* background-color: #1f2670; */
+  
     background-color: #555b8b;
   }
   .iner-card {
@@ -167,9 +165,7 @@
   }
   .technicial-logo {
     display: none;
-    /* text-align: start;
-    justify-content: start;
-    display: flex; */
+
   }
   .card {
     display: flex;
@@ -177,12 +173,6 @@
     align-items: center;
   }
 
-  /* .login-formm {
-    margin-left: 10%;
-    border: 1px solid #1f2670;
-    width: 80%;
-    height: 25vh;
-  } */
   .label {
     text-align: left;
   }
@@ -212,7 +202,7 @@
 .second-row {
   height: 22vh;
   background-color: #1f2670;
-  /* background-color: #1f2670; */
+ 
 
   border-top: 1px solid rgb(255, 105, 105);
   border-bottom: 1px solid rgb(255, 105, 105);
@@ -255,4 +245,246 @@
 
 .label {
   text-align: right;
+} */
+@import url("https://fonts.googleapis.com/css?family=Montserrat:400,800");
+
+* {
+  box-sizing: border-box;
+}
+
+h1 {
+  font-weight: bold;
+  margin: 0;
+}
+
+h2 {
+  text-align: center;
+}
+
+p {
+  font-size: 14px;
+  font-weight: 100;
+  line-height: 20px;
+  letter-spacing: 0.5px;
+  margin: 20px 0 30px;
+}
+
+span {
+  font-size: 12px;
+}
+
+a {
+  color: #333;
+  font-size: 14px;
+  text-decoration: none;
+  margin: 15px 0;
+}
+
+button {
+  border-radius: 20px;
+  border: 1px solid #6c63ff;
+  background-color: #6c63ff;
+  color: #ffffff;
+  font-size: 12px;
+  font-weight: bold;
+  padding: 12px 45px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  transition: transform 80ms ease-in;
+}
+
+button:active {
+  transform: scale(0.95);
+}
+
+button:focus {
+  outline: none;
+}
+
+button.ghost {
+  background-color: transparent;
+  border-color: #ffffff;
+}
+
+form {
+  background-color: #ffffff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 0 50px;
+  height: 100%;
+  text-align: center;
+}
+
+/* .inputt {
+  background-color: #eee;
+  border: none;
+  padding: 12px 15px;
+  margin: 8px 0;
+  width: 100%;
+  border-radius: 5px;
+} */
+
+.container {
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+  position: relative;
+  overflow: hidden;
+  width: 768px;
+  max-width: 100%;
+  min-height: 480px;
+}
+
+.form-container {
+  position: absolute;
+  top: 0;
+  height: 100%;
+  transition: all 0.6s ease-in-out;
+}
+
+.sign-in-container {
+  left: 0;
+  width: 50%;
+  z-index: 2;
+}
+
+.container.right-panel-active .sign-in-container {
+  transform: translateX(100%);
+}
+
+.sign-up-container {
+  left: 0;
+  width: 50%;
+  opacity: 0;
+  z-index: 1;
+}
+
+.container.right-panel-active .sign-up-container {
+  transform: translateX(100%);
+  opacity: 1;
+  z-index: 5;
+  animation: show 0.6s;
+}
+
+@keyframes show {
+  0%,
+  49.99% {
+    opacity: 0;
+    z-index: 1;
+  }
+
+  50%,
+  100% {
+    opacity: 1;
+    z-index: 5;
+  }
+}
+
+.overlay-container {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  width: 50%;
+  height: 100%;
+  overflow: hidden;
+  transition: transform 0.6s ease-in-out;
+  z-index: 100;
+}
+
+.container.right-panel-active .overlay-container {
+  transform: translateX(-100%);
+}
+
+.overlay {
+  background: #021a33;
+  background: -webkit-linear-gradient(to right, #021a33, #021a33);
+  background: linear-gradient(to right, #021a33, #021a33);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 0 0;
+  color: #ffffff;
+  position: relative;
+  left: -100%;
+  height: 100%;
+  width: 200%;
+  transform: translateX(0);
+  transition: transform 0.6s ease-in-out;
+}
+
+.container.right-panel-active .overlay {
+  transform: translateX(50%);
+}
+
+.overlay-panel {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 0 40px;
+  text-align: center;
+  top: 0;
+  height: 100%;
+  width: 50%;
+  transform: translateX(0);
+  transition: transform 0.6s ease-in-out;
+}
+
+.overlay-left {
+  transform: translateX(-20%);
+}
+
+.container.right-panel-active .overlay-left {
+  transform: translateX(0);
+}
+
+.overlay-right {
+  right: 0;
+  transform: translateX(0);
+}
+
+.container.right-panel-active .overlay-right {
+  transform: translateX(20%);
+}
+
+.social-container {
+  margin: 5px 0;
+}
+
+.social-container a {
+  border: 1px solid #dddddd;
+  border-radius: 50%;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 5px;
+  height: 40px;
+  width: 40px;
+}
+
+footer {
+  background-color: #222;
+  color: #fff;
+  font-size: 14px;
+  bottom: 0;
+  position: fixed;
+  left: 0;
+  right: 0;
+  text-align: center;
+  z-index: 999;
+}
+
+footer p {
+  margin: 10px 0;
+}
+
+footer i {
+  color: red;
+}
+
+footer a {
+  color: #3c97bf;
+  text-decoration: none;
 }
