--- a/src/Component/MainComponent/SideBar1/SideBar.css
+++ b/src/Component/MainComponent/SideBar1/SideBar.css
@@ -1,28 +1,3 @@
-/* <div className="main p-3">
-<div className="row dashboard-name">
-  <img
-    src={`${imagelink}02.jpg`}
-    alt="Company Logo"
-    style={{ height: "100px", marginLeft: "150px", width: "350px" }}
-  />
-</div>
-<div
-  className="row "
-  style={{ borderTop: "2px solid blue", width: "90%" }}
->
-  <div className="col-4 dashboard-okara">LAHORE</div>
-  <div className="col-1"></div>
-  <div className="col-7 dashboard-address">
-    {organisation && organisation.address} <br /> Phone #:
-    {organisation && organisation.contactno}
-  </div>
-</div>
-<div className="row" style={{ marginTop: "2%" }}>
-  <div className="col-4 dashboard-companynameimage">
-    <img src={CompanyName} alt="logo" />
-  </div>
-  <div className="col-4 dashboard-companyinfoimage">
-    <img src={CompanyInfo} alt="logo" />
-  </div>
-</div>
-</div> */
+.css-10hburv-MuiTypography-root {
+  font-size: 14px !important;
+}
