--- a/src/Component/Utilities/UserManagement/AddUser/AddUser.css
+++ b/src/Component/Utilities/UserManagement/AddUser/AddUser.css
@@ -1,11 +1,29 @@
 .form-control-item {
-  background-color: rgb(248, 248, 248) !important;
+  font-family: "Poppins", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  /* color: rgb(230, 233, 236); */
+  font-size: 15px;
+  line-height: 23px;
+  /* background-color: rgb(248, 248, 248) !important; */
   height: 24px !important;
   box-shadow: none !important;
   border-radius: 0px !important;
   margin-bottom: 4px !important;
   margin-left: -10px !important;
-  /* align-items: center !important; */
+}
+
+.label-item {
+  font-family: "Poppins", sans-serif;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 23px;
+  /* color: rgb(230, 233, 236); */
+  display: flex;
+  align-items: start;
+  justify-content: flex-end;
 }
 .form-control-remarks {
   background-color: rgb(248, 248, 248) !important;
@@ -34,12 +52,6 @@
   transition: background-color 0.8s;
 }
 
-.label-item {
-  /* font-weight: bold; */
-  display: flex;
-  align-items: start;
-  justify-content: flex-end;
-}
 .form-user-container {
   background-color: #e7e7e7;
   border-radius: 5px;
