--- a/src/Component/MainComponent/Header/Admin/MenuAdmin/MenuAdmin.css
+++ b/src/Component/MainComponent/Header/Admin/MenuAdmin/MenuAdmin.css
@@ -153,26 +153,26 @@ styles.css .menu-container {
   background-color: #397fc9;
   color: "white";
 }
-.custom-scrollbar-user {
+.custom-scrollbar {
   overflow-y: auto;
-  max-height: 49vh;
+  max-height: 64vh;
   width: 100%;
   border-bottom: 1px solid var(--font-color);
 }
 
-.custom-scrollbar-user::-webkit-scrollbar {
+.custom-scrollbar::-webkit-scrollbar {
   width: 5px;
 }
 
-.custom-scrollbar-user::-webkit-scrollbar-track {
+.custom-scrollbar::-webkit-scrollbar-track {
   background-color: var(--backgroundcolor-color);
 }
 
-.custom-scrollbar-user::-webkit-scrollbar-thumb {
+.custom-scrollbar::-webkit-scrollbar-thumb {
   background-color: var(--font-color);
   border-radius: 10px;
 }
 
-.custom-scrollbar-user::-webkit-scrollbar-thumb:hover {
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
   background-color: var(--font-color);
 }
