--- a/src/Component/MainComponent/Header/Admin/Admin.css
+++ b/src/Component/MainComponent/Header/Admin/Admin.css
@@ -17,29 +17,38 @@
   margin-left: -10px !important;
 }
 input[name="AccountCodeform"]::placeholder {
-  color: var(--font-color);
+  color: gray;
 }
 
 input[name="Descriptionform"]::placeholder {
-  color: var(--font-color);
+  color: gray;
 }
 input[name="inputform4"]::placeholder {
-  color: var(--font-color);
+  color: gray;
 }
 input[name="inputform5"]::placeholder {
-  color: var(--font-color);
+  color: gray;
 }
 input[name="inputform6"]::placeholder {
-  color: var(--font-color);
+  color: gray;
 }
 input[name="inputform7"]::placeholder {
-  color: var(--font-color);
+  color: gray;
 }
 input[name="inputform8"]::placeholder {
-  color: var(--font-color);
+  color: gray;
 }
 input[name="inputform9"]::placeholder {
-  color: var(--font-color);
+  color: gray;
+}
+input[name="inputform10"]::placeholder {
+  color: gray;
+}
+input[name="inputform11"]::placeholder {
+  color: gray;
+}
+input[name="inputform12"]::placeholder {
+  color: gray;
 }
 .label-customer {
   font-family: "Poppins", sans-serif;
