--- a/src/Component/MainComponent/Header/Admin/Admin.css
+++ b/src/Component/MainComponent/Header/Admin/Admin.css
@@ -16,39 +16,19 @@
   margin-bottom: 4px !important;
   margin-left: -10px !important;
 }
-input[name="AccountCodeform"]::placeholder {
-  color: gray;
-}
-
-input[name="Descriptionform"]::placeholder {
-  color: gray;
-}
-input[name="inputform4"]::placeholder {
-  color: gray;
-}
-input[name="inputform5"]::placeholder {
-  color: gray;
-}
-input[name="inputform6"]::placeholder {
-  color: gray;
-}
-input[name="inputform7"]::placeholder {
-  color: gray;
-}
-input[name="inputform8"]::placeholder {
-  color: gray;
-}
-input[name="inputform9"]::placeholder {
-  color: gray;
-}
-input[name="inputform10"]::placeholder {
-  color: gray;
-}
-input[name="inputform11"]::placeholder {
-  color: gray;
-}
-input[name="inputform12"]::placeholder {
-  color: gray;
+.form-control-remarkss {
+  font-family: "Poppins", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  color: var(--font-color) !important;
+  font-size: 15px;
+  /* line-height: 40px; */
+  background-color: var(--backgroundcolor-color) !important;
+  height: 60px !important;
+  box-shadow: none !important;
+  border-radius: 0px !important;
+  margin-bottom: 4px !important;
+  margin-left: -10px !important;
 }
 .label-customer {
   font-family: "Poppins", sans-serif;
