--- a/src/Component/MainComponent/Header/Admin/AdminUserManagement/AdminMenuUser/AdminMenuUser.css
+++ b/src/Component/MainComponent/Header/Admin/AdminUserManagement/AdminMenuUser/AdminMenuUser.css
@@ -153,35 +153,26 @@ styles.css .menu-container {
   background-color: #397fc9;
   color: "white";
 }
-.custom-scrollbar {
+.custom-scrollbar-user {
   overflow-y: auto;
-  max-height: 64vh;
+  max-height: 49vh;
   width: 100%;
   border-bottom: 1px solid var(--font-color);
 }
 
-.custom-scrollbar::-webkit-scrollbar {
+.custom-scrollbar-user::-webkit-scrollbar {
   width: 5px;
 }
 
-.custom-scrollbar::-webkit-scrollbar-track {
+.custom-scrollbar-user::-webkit-scrollbar-track {
   background-color: var(--backgroundcolor-color);
 }
 
-.custom-scrollbar::-webkit-scrollbar-thumb {
+.custom-scrollbar-user::-webkit-scrollbar-thumb {
   background-color: var(--font-color);
   border-radius: 10px;
 }
 
-.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+.custom-scrollbar-user::-webkit-scrollbar-thumb:hover {
   background-color: var(--font-color);
-}
-.sticky-header-menuadmin {
-  box-sizing: 0px 0px 3px var(--font-color) !important;
-  border-right: 1px solid var(--font-color) !important;
-  background-color: var(--backgroundcolor-color) !important;
-  position: sticky;
-  top: 0;
-  z-index: 1;
-  border: 1px solid var(--font-color) !important;
 }
