--- a/src/Component/MainComponent/Header/Admin/Admin.css
+++ b/src/Component/MainComponent/Header/Admin/Admin.css
@@ -1,44 +1,8 @@
-.my-modal {
-  width: 40vw;
-  max-width: 40vw;
+.my-modal-menu {
+  width: 35vw;
+  max-width: 35vw;
 }
-.form-control-customer {
-  font-family: "Poppins", sans-serif;
-  font-style: normal;
-  font-weight: 400;
-  color: var(--font-color) !important;
-  font-size: 15px;
-  line-height: 23px;
-  background-color: var(--backgroundcolor-color) !important;
-  height: 24px !important;
-  box-shadow: none !important;
-  border-radius: 0px !important;
-  margin-bottom: 4px !important;
-  margin-left: -10px !important;
-}
-.form-control-remarkss {
-  font-family: "Poppins", sans-serif;
-  font-style: normal;
-  font-weight: 400;
-  color: var(--font-color) !important;
-  font-size: 15px;
-  /* line-height: 40px; */
-  background-color: var(--backgroundcolor-color) !important;
-  height: 60px !important;
-  box-shadow: none !important;
-  border-radius: 0px !important;
-  margin-bottom: 4px !important;
-  margin-left: -10px !important;
-}
-.label-customer {
-  font-family: "Poppins", sans-serif;
-  font-size: 15px;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 15px;
-  line-height: 23px;
-  /* color: rgb(230, 233, 236); */
-  display: flex;
-  align-items: start;
-  justify-content: flex-end;
+.my-modal-MenuAdminModal {
+  width: 35vw;
+  max-width: 35vw;
 }
